requiring tests before deploy

--- a/.github/workflows/deploy-aws-lambda.yaml
+++ b/.github/workflows/deploy-aws-lambda.yaml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  test:
+  test: 
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
@@ -36,6 +36,7 @@ jobs:
           pipenv run test -v
           
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     strategy:
       matrix:
